changes made to the home controller, and a few html source codes are being updated.

--- a/Project-G06/Views/Shared/_Layout.cshtml
+++ b/Project-G06/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-           <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+       <!--    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -38,14 +38,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="aboutUs">About Us</a>
                         </li>
                     </ul>
-                </div>
+                </div>-->
             </div>
         </nav>
     </header>
     <div class="Mynavbar">
         <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
         <a asp-area="" asp-controller="Home" asp-action="compare">Compare</a>
-        <a asp-area="" asp-controller="Home" asp-action="Register">Register</a>
         <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         <a asp-area="" asp-controller="Home" asp-action="Index">University Profile</a>
         <a asp-area="" asp-controller="Home" asp-action="aboutUs">About Us</a>
