--- a/Project-G06/Views/Home/Compare.cshtml
+++ b/Project-G06/Views/Home/Compare.cshtml
@@ -34,7 +34,7 @@
         </p>
     </div>
     <div style="Width:200px ; border: 1px solid black ">
-        <h3>Title</h3>><br />
+        <h3>Title</h3><br />
         <p>add image here</p>
         <p>
             program. Some of these are complex hence harder to navigate. Fake propaganda
