updates to the navbar

--- a/Project-G06/Views/Home/aboutUs.cshtml
+++ b/Project-G06/Views/Home/aboutUs.cshtml
@@ -6,6 +6,7 @@
 
 <h4>About US</h4>
 <p>This is a web application</p>
+<img src="~/images/uni.webp" alt="BVB" height="300px" />
 <p> 
 Students who have just completed their O/L or A/L examinations face the problem of finding the best university to suit their requirements.
 There is no common platform for students to compare degree programs of several universities.For this students have to visit several websites to find a degree
