--- a/Project-G06/Views/Shared/_Layout.cshtml
+++ b/Project-G06/Views/Shared/_Layout.cshtml
@@ -17,28 +17,7 @@
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-       <!--    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="compare">Compare</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Register">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">University Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="aboutUs">About Us</a>
-                        </li>
-                    </ul>
-                </div>-->
+    
             </div>
         </nav>
     </header>
@@ -67,7 +46,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Project_G06 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - Project_G06 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a><br />
+            <a asp-area="" asp-controller="Home" asp-action="aboutUs">About Us</a><br />
+            <a href="#">Contact Us</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
