--- a/Project-G06/wwwroot/css/site.css
+++ b/Project-G06/wwwroot/css/site.css
@@ -78,3 +78,23 @@ body {
     display: block;
 }
 
+.table {
+    border: solid 5px;
+    border-color: black;
+}
+
+.container {
+    border-collapse: collapse;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    gap:20px;
+    margin:10px;
+}
+
+.con {
+    Width: 350px;
+    border: 1px solid black;
+}
+
