--- a/Project-G06/Views/Shared/_Layout.cshtml
+++ b/Project-G06/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
             </button>
             <div class="Mynavbar_dropdown-content">
                 <a href="#">Login</a>
+                <a asp-area="" asp-controller="Home" asp-action="LOGINSUPERADMIN">Login for super admin</a>
 
             </div>
         </div>
